--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -44,14 +44,27 @@ body::before {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    perspective: 3000px;
 }
 
 .s-card {
     border: 0.5rem solid white;
-    width: calc(100%/3 - 8%);
+    width: calc(100vw/3 - 10%);
     height: 70vh;
-    position: relative;
+    position: absolute;
     transition: filter .5s ease-in-out;
+
+    &:nth-child(1){
+        transform: rotateY(0deg) translateZ(50vw);
+    }
+
+    &:nth-child(2){
+        transform: rotateY(120deg) translateZ(50vw);
+    }
+
+    &:nth-child(3){
+        transform: rotateY(240deg) translateZ(50vw);
+    }
 }
 
 .s-card__background {
@@ -84,11 +97,13 @@ body::before {
 }
 
 .s-controller {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 3rem;
+    bottom: 1.5rem;
+    width: 100%;
 }
 
 .s-controller__button {
@@ -117,6 +132,14 @@ body::before {
 
 .s-controller__button:nth-child(2) {
     margin: 0 3.75rem;
+}
+
+.s-controller__button--active{
+    background-color: white;
+    color: var(--primary-color);
+    border: 0.1875rem solid var(--primary-color);
+    outline: 0.125rem solid white;
+
 }
 
 .s-controller__line {
@@ -161,4 +184,12 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
 
 .s-card--hovered .s-card__title{
     bottom: 85%;
+}
+
+.s-cards-carousel{
+    display: flex;
+    justify-content: center;
+    width: calc(100vw / 3 - 10%);
+    transform-style: preserve-3d;
+    transition: transform 0.4s ease-in-out;
 }
